# mcfunction-debugger

./: .gitignore  Cargo.toml  README.md  build.rs  todo.md  workspace.code-workspace
.github/workflows/: ci.yml  release.yml  rust.yml
.github/workflows/setup-minecraft-for-ci/data/setup_minecraft_for_ci/functions/: install.mcfunction  load.mcfunction
docs/: command-line-interface.md  how-to-open-a-command-line.md  usage.md
mcfunction-debug-adapter/: Cargo.toml  README.md  build.rs
mcfunction-debug-adapter/src/: adapter.rs  api.rs  codec.rs  error.rs  executor.rs  installer.rs  lib.rs  main.rs  minecraft.rs  receiver.rs  sender.rs
mcfunction-debug-adapter/src/adapter/: tests.rs  utils.rs
mcfunction-debug-adapter/src/installer_datapack/: pack.mcmeta
mcfunction-debug-adapter/src/installer_datapack/data/mcfd_init/functions/: cancel.mcfunction  cancel_cleanup.mcfunction  choose_chunk.mcfunction  confirm_chunk.mcfunction  install.mcfunction  load.mcfunction  reload.mcfunction  remove_chunk_choice.mcfunction  uninstall.mcfunction
mcfunction-debug-adapter/src/installer_datapack/data/minecraft/tags/functions/: load.json
mcfunction-debug-adapter/tests/: integration_test.rs  utils.rs
mcfunction-debug-adapter/tests/utils/: mod.rs  timeout.rs
src/: adapter.rs  config.rs  dap.rs  generator.rs  installer.rs  lib.rs  macros.rs  main.rs  parser.rs  partition.rs  template_engine.rs  tests.rs  utils.rs
src/adapter/: utils.rs
src/config/: adapter.rs
src/dap/: api.rs  executor.rs  receiver.rs  sender.rs
src/datapack_resources/data/debug/functions/: decrement_age.mcfunction  install.mcfunction  select_entity.mcfunction  tick_start.mcfunction  uninstall.mcfunction
src/datapack_resources/data/debug/functions/id/: assign.mcfunction  install.mcfunction
src/datapack_resources/data/minecraft/tags/functions/: tick.json
src/datapack_resources/debug/functions/id/: init_self.mcfunction  uninstall.mcfunction
src/datapack_resources/debug/functions/summon_entity_markers/: summon_selected_entity_marker.mcfunction  summon_selected_entity_marker_anchored_eyes.mcfunction
src/datapack_resources/id_generation/: assign.mcfunction  init_self.mcfunction  install.mcfunction  uninstall.mcfunction
src/datapack_resources/installation/: install.mcfunction  uninstall.mcfunction
src/datapack_resources/summon_entity_markers/: summon_selected_entity_marker.mcfunction  summon_selected_entity_marker_anchored_eyes.mcfunction
src/datapack_template/: pack.mcmeta
src/datapack_template/data/-ns-/functions/: abort_session.mcfunction  animate_context.mcfunction  clean_up.mcfunction  continue.mcfunction  decrement_age.mcfunction  eval_max_age_tag.mcfunction  freeze_aec.mcfunction  install.mcfunction  load.mcfunction  log_scores.mcfunction  on_finish_session.mcfunction  on_session_exit.mcfunction  on_session_exit_successful.mcfunction  prepare_resume.mcfunction  reset_skipped.mcfunction  resume.mcfunction  resume_aec.mcfunction  resume_immediate.mcfunction  resume_immediately.mcfunction  resume_self.mcfunction  resume_unchecked.mcfunction  schedule.mcfunction  select_entity.mcfunction  skipped_functions_warning.mcfunction  tick.mcfunction  tick_start.mcfunction  unfreeze_aec.mcfunction  uninstall.mcfunction  update_scores.mcfunction  validate_all_functions.mcfunction
src/datapack_template/data/-ns-/functions/id/: assign.mcfunction  init_self.mcfunction  install.mcfunction  uninstall.mcfunction
src/datapack_template/data/-orig_ns-/functions/-orig/: fn-.mcfunction
src/datapack_template/data/debug/functions/: install.mcfunction  resume.mcfunction  show_scores.mcfunction  show_skipped.mcfunction  stop.mcfunction  uninstall.mcfunction
src/datapack_template/data/minecraft/tags/functions/: load.json  tick.json
src/datapack_template/data/template/functions/: breakpoint.mcfunction  breakpoint_conditional.mcfunction  breakpoint_configurable.mcfunction  call_function.mcfunction  return.mcfunction  schedule_append.mcfunction  schedule_clear.mcfunction  schedule_replace.mcfunction  set_breakpoint.mcfunction
src/generator/: config.rs  parser.rs  partition.rs  template_engine.rs
src/generator/config/: adapter.rs
src/generator/parser/: command.rs  tests.rs
src/generator/parser/command/: argument.rs
src/generator/parser/command/argument/minecraft/: block.rs  coordinate.rs  entity.rs  nbt.rs
src/parser/: commands.rs  mod.rs  tests.rs
src/parser/command/: argument.rs  mod.rs  resource_location.rs
src/parser/command/argument/: brigadier.rs  coordinate.rs  mod.rs
src/parser/command/argument/minecraft/: block.rs  coordinate.rs  mod.rs  nbt.rs  range.rs
src/parser/command/argument/minecraft/entity/: mod.rs  tests.rs
src/template_engine/: mod.rs
src/templates/: breakpoint_found.mcfunction  call_function.mcfunction  init.mcfunction  mark_current_entity.mcfunction  schedule_function.mcfunction  set_breakpoint.mcfunction  store_debug_caller_main_context.mcfunction  store_debug_caller_recursive_context.mcfunction  tick.mcfunction
src/templates/namespace/functions/: continue.mcfunction  continue_aec.mcfunction
src/templates/namespace/functions/original_namespace/original_function/: continue.mcfunction  continue_return.mcfunction  interate_same_executor.mcfunction  iterate.mcfunction  iteration_step.mcfunction  line_numbers.mcfunction  line_numbers_with_context.mcfunction  return.mcfunction  scheduled.mcfunction  start.mcfunction
src/tests/: mod.rs
src/tests/datapacks/mcfd_test/: pack.mcmeta
test/datapack_template/data/test/functions/schedule_aec_age_10t/: scheduled.mcfunction  test.mcfunction
test/datapack_template/data/test/functions/schedule_aec_age_1t/: scheduled.mcfunction  test.mcfunction
test/datapack_template/data/test/functions/schedule_aec_duration_0_1t/: test.mcfunction
test/datapack_template/data/test/functions/schedule_gametime_10t/: test.mcfunction  (+1 more)
test/datapack_templates/mcfd_tick/: pack.mcmeta
tests/: adapter_test.rs  generator_test.rs  integration_test.rs
tests/datapacks/mcfd_test/: pack.mcmeta
tests/datapacks/mcfd_tick/: pack.mcmeta
tests/utils/: mod.rs
(+273 files in other folders)
