[package]
authors = ["Adrodoc <adrodoc55@googlemail.com>", "skess42 <skagaros@gmail.com>"]
categories = ["command-line-utilities", "development-tools::debugging"]
description = "A debugger for Minecraft's *.mcfunction files that does not require any Minecraft mods"
edition = "2018"
exclude = ["tests"]
keywords = ["datapack", "debugger", "mcfunction", "minecraft", "vanilla"]
license = "GPL-3.0-or-later"
name = "mcfunction-debugger"
repository = "https://github.com/vanilla-technologies/mcfunction-debugger"
version = "0.1.0"

[workspace]
members = ["mcfunction-debug-adapter"]

[dependencies]
clap = "2"
futures = "0.3"
hematite-nbt = { version = "0.5" }
log = "0.4"
minect = { git = "ssh://git@github.com/mcfunction-debugger/minect.git" }
# minect = { path = "../minect" }
multimap = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "2"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "time",
] }
walkdir = "2"

[dev-dependencies]
serial_test = "0.8"

[build-dependencies]
vergen = "7"
walkdir = "2"
