[package]
name = "mcfunction-debug-adapter"
version = "0.1.0"
edition = "2018"

[dependencies]
mcfunction-debugger = { path = ".." }

async-trait = "0.1"
bytes = "1"
clap = "2"
debug-adapter-protocol = { git = "ssh://git@github.com/vanilla-technologies/debug-adapter-protocol.git" }
# debug-adapter-protocol = { path = "../../debug-adapter-protocol" }
futures = "0.3"
log = "0.4"
log-panics = "2"
minect = { git = "ssh://git@github.com/mcfunction-debugger/minect.git" }
# minect = { path = "../../minect" }
multimap = "0.8"
serde_json = "1"
sender-sink = "0.2"
simplelog = "0.12"
tokio = { version = "1", features = [
  "io-std",
  "io-util",
  "macros",
  "parking_lot",
  "rt-multi-thread",
  "time",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
typed-builder = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert2 = "0.3"
serial_test = "0.8"

[build-dependencies]
vergen = "7"
