[package]
authors = ["Adrodoc <adrodoc55@googlemail.com>", "skess42 <skagaros@gmail.com>"]
categories = ["development-tools::debugging"]
description = "A debugger for Minecraft's *.mcfunction files that does not require any Minecraft mods"
edition = "2021"
exclude = ["tests"]
keywords = ["datapack", "debugger", "mcfunction", "minecraft", "vanilla"]
license = "GPL-3.0-or-later"
name = "mcfunction-debug-adapter"
repository = "https://github.com/vanilla-technologies/mcfunction-debugger"
version = "0.1.0"

[dependencies]
mcfunction-debugger = { path = ".." }

async-trait = "0.1"
bytes = "1"
clap = "2"
debug-adapter-protocol = "0.1"
# debug-adapter-protocol = { git = "ssh://git@github.com/vanilla-technologies/debug-adapter-protocol.git" }
# debug-adapter-protocol = { path = "../../debug-adapter-protocol" }
futures = "0.3"
log = "0.4"
log-panics = "2"
minect = "0.1"
# minect = { git = "ssh://git@github.com/mcfunction-debugger/minect.git" }
# minect = { path = "../../minect" }
multimap = "0.8"
serde_json = "1"
sender-sink = "0.2"
simplelog = "0.12"
tokio = { version = "1", features = [
  "io-std",
  "io-util",
  "macros",
  "parking_lot",
  "rt-multi-thread",
  "time",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
typed-builder = "0.11"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert2 = "0.3"
serial_test = "1"

[build-dependencies]
vergen = "7"
